# unsloth_peft

./: .gitignore  Modelfile  README.md  WASU_QA.jsonl  bad2.6k.csv  bad2.6k.txt  censorship.py  censorship.txt  censorship.txt.1  chat_template.jinja  china_bad_10000.json  chinese_simpleqa.csv  classify_sw.py  cleanup.sh  compose.wenlv.yaml  compose.yaml  csv2txt.py  dalle.py  dataset2jsonl.py  dataset2mysql.py  dset.py  extract_question.py  gen_questions.py  gpro.py  identity.json  identity.jsonl  identity.wenlv.json  identity.wenlv.jsonl  json2csv.py  normal_20250324.csv  normal_questions.txt  parquet2json.py  parquet2sql.py  peft_model.txt  pretrained_model.txt  pyproject.toml  quantization.py  replace_system_message.sh  results.csv  results.txt  (+35 more)
files/: 58.txt  59.txt  62.txt  65.txt  70.txt  71.txt  72.txt  73.txt  74.txt  77.txt  78.txt  79.txt  80.txt  81.txt  82.txt  83.txt  84.txt  86.txt  87.txt  88.txt  89.txt  90.txt  92.txt  93.txt  94.txt  95.txt  96.txt  97.txt
files/multi-act/: 54.docx  54.txt  55.docx  55.txt  56.docx  56.txt  57.docx  57.txt  58.docx  59.docx  60.docx  60.txt  61.docx  61.txt  62.docx  63.docx  63.txt  64.docx  64.txt  65.docx  66.docx  66.txt  67.docx  67.txt  68.docx  68.txt  69.docx  69.txt  70.docx  71.docx  72.docx  73.docx  74.docx  75.docx  75.txt  76.docx  76.txt  77.docx  78.docx  79.docx  (+15 more)
files/singl-act/: 93.docx  94.docx  95.docx  96.docx  97.docx
files/wenlv/docx/: 2云澜湾景区整体介绍.docx  三衢石林免费游玩须知20250124.docx  三衢石林景区游玩须知20250124.docx  下渚湖游玩须知20250124.docx  下渚湖湿地风景区介绍.docx  东西岩.docx  东西岩游客须知20250124.docx  临安城投景澜.docx  仙都.docx  (+169 more)
(+938 files in other folders)
