[project]
name = "unsloth_peft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "unsloth[cu124-torch251]",
    "trl",
    "docx2txt",
    "setuptools",
    "openai",
    "httpx[socks]",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
