[project]
name = "unsloth_peft"
version = "0.1.0"
description = "finetune language models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "unsloth[cu124-torch260]",
    "trl",
    "docx2txt",
    "setuptools",
    "openai",
    "httpx[socks]",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }
